# CTrain

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/rail/: Rail.cpp  Rail.hpp  Switch.cpp  Switch.hpp
src/scenes/: Cloud.cpp  Cloud.hpp  Crate.cpp  Crate.hpp  Cursor.cpp  Cursor.hpp  Legend.cpp  Legend.hpp
src/settings/: Globals.cpp  Globals.hpp
src/train/: Train.cpp  Train.hpp
